[package]
name = "aptos-block-executor"
description = "Aptos block transaction executor library, parallel execution via Block-STM"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-aggregator = { workspace = true }
aptos-infallible = { workspace = true }
aptos-logger = { workspace = true }
aptos-metrics-core = { workspace = true }
aptos-mvhashmap = { workspace = true }
aptos-state-view = { workspace = true }
aptos-types = { workspace = true }
arc-swap = { workspace = true }
bcs = { workspace = true }
criterion = { workspace = true, optional = true }
crossbeam = { workspace = true }
crossbeam-queue = { workspace = true }
dashmap = { workspace = true }
move-binary-format = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
rayon = { workspace = true }
itertools = { workspace = true }
rand = "0.7.3"
crossbeam-skiplist = "0.1.1"
core_affinity = "0.8.0"
tokio.workspace = true
color-eyre = "0.5.11"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
async-priority-channel = "0.1.0"
boxcar = "0.2.2"

[dev-dependencies]
claims = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
rand = { workspace = true }

[features]
fuzzing = ["criterion", "proptest", "proptest-derive"]

[[bench]]
name = "scheduler_benches"
harness = false
required-features = ["fuzzing"]
